# django-moodle_webservice

./: README.md  setup.cfg
moodle_webservice/: apps.py  models.py
moodlewebservice/: apps.py
